Fix spacing on session form

--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -49,14 +49,11 @@
 }
 
 .login-link {
-  display: flex;
   text-decoration: underline;
-  justify-content: flex-start;
   margin-right: 10px;
 }
 
 .signup-link {
   text-decoration: underline;
-  justify-content: flex-end;
   margin-right: 10px;
 }
